Fix DBus service activation

Previously this was supposed to be started in ElisaApplication::create,
except it wasn't started because this function was never called.

https://doc.qt.io/qt-6/qqmlengine.html#QML_SINGLETON

> By default, each QQmlEngine will try to create a singleton instance
> using either the type's default constructor or a static factory
> function of the signature T *create(QQmlEngine *, QJSEngine *) when
> the type is first accessed. If both do exist and are accessible, the
> default constructor is preferred.

Test-plan:
Run kdesrc-build --run elisa. After the window is launched, run the same
command in a separate terminal session.

Before: two instances of Elisa opened

Now: only one instance of Elisa opens.

Amends fc374017
BUG: 487905

(cherry picked from commit d8bd1a35a835d44d28a07e7e671e7cfc29d07073)